# QTCross-platform

./: CMakeLists.txt  Main.qml  QmlClassDiag.qmodel  classdiag.qmodel  database.cpp  database.h  listmodel.cpp  listmodel.h  main.cpp  variantuse.qmodel
